Merge to Deploy (#164)
* feat : add SendEmailCode API, CORS Filter (#115)

* Update deploy.yml

* Update deploy.yml

* Update deploy.yml

* Update deploy.yml

* Update deploy.yml

* Update deploy.yml

* Update deploy.yml

* 배포용 브렌치에 병합(build test) (#66)

* Update deploy.yml

* Update deploy.yml

* Update deploy.yml

* Main (#59)

* Update deploy.yml

* Update deploy.yml

* Update deploy.yml

* Update deploy.yml

* Update deploy.yml

* Feat/response, exception (#54)

* feat: BaseResponseEntity 및 Status 설계

* feat: exception 설계

* Main (#62)

* Update deploy.yml

* Update deploy.yml

* Update deploy.yml

* Update deploy.yml

* Update deploy.yml

* Update deploy.yml

* Update deploy.yml

* refactor: 색상 옵션 api 수정 (#63)

* feat: size option api 설계 (#64)

* feat: 크기 옵션 dto, vo, repository 설계

* feat: 사이즈 옵션 api 설계

---------

Co-authored-by: HyeonProG <167273902+HyeonProG@users.noreply.github.com>

* Update deploy.yml

* feat : Create User Entity

Creating User Entity and Mapping Enum Type Columns

* chore : add comment

* feat : add SignUpRequest Dto, Vo

* feat : implement sign-up and email/nickname duplication check APIs

- Added user registration functionality
- Implemented APIs to check for duplicate email and nickname
- Passwords are now securely hashed using BCrypt

* feat: add agreement and user agreement entities with enum and converter

* feat: fetch sign-up agreements

* chore : change file name

RequestGetSignUpAgreementDto.java -> RequestGetAgreementDto.java
RequestGetSignUpAgreementVo.java -> RequestGetAgreementVo.java

* refactor : inject PasswordEncoder into DTO instead of passing encoded value from Service

* chore : remove comment

* feat : add getShippingAddressAgreement API

* refactor : delete EnumConverter, add Enumerated anotation

* fix: handle unique constraint violation error on signup

* refactor: apply BaseResponseEntity to responses and add Swagger @Operation annotations

* feat: add support for user agreement and disagreement to terms

* feat